Mon Dec  2 19:41:27 2002  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_Test.cpp: Rather than close connections outright
          when beginning to shut down test, just shut down the write side.
          This is an effort to make the receiving closes cleaner.

Mon Dec  2 17:58:06 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/ACE.cpp: Fixed a compile error with g++.

Sat Nov 30 09:18:51 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/ACE.{h,cpp}: Added a new crc32() method that works on
	  an iovec.  Thanks to Tufan Oruk <toruk@usa.net> for contributing
 	  this.

	* THANKS: Just added our 1,600 contributor to ACE+TAO!

Mon Dec 02 18:59:33 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL.h:
        * ace/Dirent.h:
        * ace/Future_Set.h:
        * ace/UPIPE_Connector.h:
        * ace/UPIPE_Acceptor.h:
        * ace/UNIX_Addr.h:
        * ace/Configuration_Import_Export.h:
          Improved doxygen documentation.

Mon Dec 02 18:47:32 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * THANKS: Added Tim Smith <timsmith_s@hotmail.com>

Sun Dec 01 10:16:45 2002  Balachandran  <bala@cs.wustl.edu>

        * ACE version 5.2.7 released.

Sat Nov 30 22:46:00 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* THANKS: Added Christophe Vedel to the hall of fame.

Fri Nov 29 12:23:14 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Thread_Manager.h (ACE_Thread_Manager): Changed all the
	  accessors to the Thread_Descriptor to be protected.

	* ace/Thread_Manager.i: Removed assertion test for null
	  Thread_Descriptor pointer.  This can happen when calling
	  thread_desc_self() from a thread not spawned by the
	  Thread_Manager, e.g., the main thread.

	  Added checks in all ACE_Thread_Manager::at_exit for null
	  thread_desc_self to avoid crash.

	  Thanks to Mathias Waack <mathias.waack@schlund.de> for reporting
	  the bug.
